package sample;

public class Constants {
    public final static String Application_Title = "Car Servis Administration / Application";
    public final static String FXML_URL = "sample.fxml";
    public final static String ICO_URL = "ico.png";
}
