@startuml
'https://plantuml.com/class-diagram

Main --> Constants
ReservationController --> ReservationProvider
ReservationController --> ReservationDTO
ReservationProvider --> Reservation
ReservationProvider --> ReservationDTO
ReservationProvider --> TimeIndex
ReservationProvider --> Database_Access

class Main{
+ void start(Stage primaryStage)
+ void main(String[] args)
}

class ReservationController {
+ ObservableList<ReservationDTO> listR
+ ReservationDTO selectedReservation
+ boolean editCheck
+ void createReservation()
+ void editReservation()
+ void deleteReservation()
+ void setCreateFieldToEmpty()
+ void initialize(URL url, ResourceBundle rb)
+ void checkCreate()
+ void setSelectedReservationToNull()
+ void getSelectedReservation()
+ void fillEditFields()
+ void checkEdit()
- void initializeTimeChoiceBox()
- void initializeTable()
- refreshReservations()
}

class Constants{
+ final static String Application_Title
+ final static String FXML_URL
+ final static String ICO_URL
}

class ReservationDTO {
- int id;
- String name;
- String phone;
- String spz;
- String timeIndex;
- String date;

ctors()
getters / setters()
}

class Reservation {
- int id;
- String name;
- String phone;
- String spz;
- int timeIndex;
- Date date;

ctors()
getters / setters()
}

class ReservationProvider{
+ ObservableList<ReservationDTO> GetAllReservations()
+ Reservation GetReservation(int id)
- ObservableList<ReservationDTO> ConvertReservationsToDto(ObservableList<Reservation> reservations)
- ReservationDTO ConvertReservationToDto(Reservation reservation)
+ void CreateReservation(String name, String phone, String spz, DatePicker datePicker, String time)
+ void EditReservation (int id, String name, String phone, String spz, DatePicker datePicker, String time)
}


class TimeIndex{
+ Map<Integer, String> hours;
+ int GetIndex(String value)
}

class Database_Access{
+ Connection ConnectDb()
+ ObservableList<Reservation> getReservations()
+ Reservation getReservation(int id)
+ updateReservation(Reservation reservation)
+ void AddNewReservation(Reservation reservation)
}




@enduml